<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.resistorvalue.MainActivity"
    android:orientation="vertical"
    android:background="@color/primary_light">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/resistorui">

            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="#FF0000"
                android:layout_centerHorizontal="true"
                android:id="@+id/firstColor"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/resistorui2">
            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/resistorui2">
            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/resistorui">
            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <ScrollView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Brown"
                android:onClick="changeFirstColor"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Red"
                android:onClick="changeFirstColor"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Orange"
                android:onClick="changeFirstColor"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Yellow"
                android:onClick="changeFirstColor"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Green"
                android:onClick="changeFirstColor"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Blue"
                android:onClick="changeFirstColor"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Violet"
                android:onClick="changeFirstColor"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Gray"
                android:onClick="changeFirstColor"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/White"
                android:onClick="changeFirstColor"/>
        </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Black"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Brown"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Red"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Orange"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Yellow"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Green"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Blue"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Violet"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Gray"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/White"/>
            </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Black"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Brown"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Red"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Orange"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Yellow"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Green"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Blue"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Violet"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Gold"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Silver"/>
            </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Gold"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Silver"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/No_Color"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
</ScrollView>
